--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Judosite</title>
+  <title>JC Olympia Zonhoven</title>
+
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+  <link rel="icon" type="image/x-icon" href="./assets/images/logojcoz.png">
+
 </head>
 <body>
   <app-root></app-root>
